--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@
 }
 
 .mark_button_add {
-    background-color: #c00;
+    background-color: #ff2600;
     color: #FFF;
     width: 300px;
     height: 50px;
@@ -49,7 +49,7 @@
 }
 
 .mark_item {
-    background-color: red;    
+    background-color: #ff2600;    
     height: 10px;
     position: absolute;
     padding: 4px 7px;
